// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuIcon render simple billing 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  width: 20px;
  height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 8px;
}

.emotion-3 {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #b2b6c3;
}

.emotion-3.emotion-3 {
  width: 16px;
  height: 16px;
  padding-left: 2px;
}

<div
    class="emotion-0 emotion-1"
  >
    <svg
      class="emotion-2 emotion-3 emotion-1"
      viewBox="0 0 16 16"
    >
      <path
        d="M9.333 0h-6.4c-.88 0-1.592.72-1.592 1.6l-.008 12.8c0 .88.712 1.6 1.592 1.6h9.608c.88 0 1.6-.72 1.6-1.6V4.8L9.333 0zm1.6 12.8h-6.4v-1.6h6.4v1.6zm0-3.2h-6.4V8h6.4v1.6zm-2.4-4V1.2l4.4 4.4h-4.4z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`MenuIcon render simple credentials 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  width: 20px;
  height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 8px;
}

.emotion-3 {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #b2b6c3;
}

.emotion-3.emotion-3 {
  width: 16px;
  height: 16px;
  padding-left: 2px;
}

<div
    class="emotion-0 emotion-1"
  >
    <svg
      class="emotion-2 emotion-3 emotion-1"
      viewBox="0 0 16 16"
    >
      <path
        d="M4.364 9.333c-.804 0-1.455-.671-1.455-1.5 0-.828.651-1.5 1.455-1.5.803 0 1.454.672 1.454 1.5 0 .829-.651 1.5-1.454 1.5zm4.109-3c-.597-1.747-2.211-3-4.11-3C1.954 3.333 0 5.348 0 7.833c0 2.486 1.954 4.5 4.364 4.5 1.898 0 3.512-1.252 4.109-3h3.163v3h2.91v-3H16v-3H8.473z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`MenuIcon render simple isButton 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  width: 20px;
  height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 8px;
}

.emotion-3 {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #b2b6c3;
}

.emotion-3.emotion-3 {
  width: 16px;
  height: 16px;
  padding-left: 0;
}

<div
    class="emotion-0 emotion-1"
  >
    <svg
      class="emotion-2 emotion-3 emotion-1"
      viewBox="0 0 16 16"
    >
      <path
        d="M9.333 0h-6.4c-.88 0-1.592.72-1.592 1.6l-.008 12.8c0 .88.712 1.6 1.592 1.6h9.608c.88 0 1.6-.72 1.6-1.6V4.8L9.333 0zm1.6 12.8h-6.4v-1.6h6.4v1.6zm0-3.2h-6.4V8h6.4v1.6zm-2.4-4V1.2l4.4 4.4h-4.4z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`MenuIcon render simple logout 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  width: 20px;
  height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 8px;
}

.emotion-3 {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #b2b6c3;
}

.emotion-3.emotion-3 {
  width: 16px;
  height: 16px;
  padding-left: 2px;
}

<div
    class="emotion-0 emotion-1"
  >
    <svg
      class="emotion-2 emotion-3 emotion-1"
      viewBox="0 0 16 16"
    >
      <path
        d="M12.488 2.296l-1.365 1.365a5.618 5.618 0 0 1 2.72 4.81 5.647 5.647 0 0 1-11.294 0c0-2.043 1.092-3.822 2.71-4.82L3.905 2.297A7.493 7.493 0 0 0 .667 8.471a7.53 7.53 0 0 0 15.058 0c0-2.56-1.28-4.82-3.237-6.175M9.138 0H7.254v9.412h1.882"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`MenuIcon render simple members 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  width: 20px;
  height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 8px;
}

.emotion-3 {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #b2b6c3;
}

.emotion-3.emotion-3 {
  width: 16px;
  height: 16px;
  padding-left: 2px;
}

<div
    class="emotion-0 emotion-1"
  >
    <svg
      class="emotion-2 emotion-3 emotion-1"
      viewBox="0 0 16 16"
    >
      <path
        d="M8,0 C9.2886644,0 10.3333334,1.080692 10.3333334,2.41379308 C10.3333334,3.74689425 9.2886644,4.82758617 8,4.82758617 C6.71133558,4.82758617 5.66666666,3.74689425 5.66666666,2.41379308 C5.66666666,1.080692 6.71133558,0 8,0 M3.33333334,1.72413792 C3.70666666,1.72413792 4.05333334,1.82758617 4.35333334,2.01379308 C4.25333334,3 4.53333334,3.97931033 5.10666666,4.74482758 C4.77333334,5.40689658 4.10666666,5.862069 3.33333334,5.862069 C2.22876383,5.862069 1.33333334,4.93576158 1.33333334,3.79310342 C1.33333334,2.65044533 2.22876383,1.72413792 3.33333334,1.72413792 M12.6666666,1.72413792 C13.7712362,1.72413792 14.6666666,2.65044533 14.6666666,3.79310342 C14.6666666,4.93576158 13.7712362,5.862069 12.6666666,5.862069 C11.8933334,5.862069 11.2266666,5.40689658 10.8933334,4.74482758 C11.4666666,3.97931033 11.7466666,3 11.6466666,2.01379308 C11.9466666,1.82758617 12.2933334,1.72413792 12.6666666,1.72413792 M3.66666666,8.79310342 C3.66666666,7.36551725 5.60666666,6.20689658 8,6.20689658 C10.3933334,6.20689658 12.3333334,7.36551725 12.3333334,8.79310342 L12.3333334,10 L3.66666666,10 L3.66666666,8.79310342 M0,10 L0,8.96551725 C0,8.00689658 1.26,7.2 2.96666666,6.96551725 C2.57333334,7.43448275 2.33333334,8.08275858 2.33333334,8.79310342 L2.33333334,10 L0,10 M16,10 L13.6666666,10 L13.6666666,8.79310342 C13.6666666,8.08275858 13.4266666,7.43448275 13.0333334,6.96551725 C14.74,7.2 16,8.00689658 16,8.96551725 L16,10 Z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`MenuIcon render simple organization 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  width: 20px;
  height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 8px;
}

.emotion-3 {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #b2b6c3;
}

.emotion-3.emotion-3 {
  width: 16px;
  height: 16px;
  padding-left: 2px;
}

<div
    class="emotion-0 emotion-1"
  >
    <svg
      class="emotion-2 emotion-3 emotion-1"
      viewBox="0 0 16 16"
    >
      <path
        d="M10.4,8 C9.512,8 8.8,8.712 8.8,9.6 C8.8,10.4836556 9.5163444,11.2 10.4,11.2 C11.2836556,11.2 12,10.4836556 12,9.6 C12,8.712 11.28,8 10.4,8 M8,14.4 C4.4653776,14.4 1.6,11.5346224 1.6,8 C1.6,4.4653776 4.4653776,1.6 8,1.6 C9.69738552,1.6 11.3252506,2.27428378 12.5254834,3.4745166 C13.7257162,4.67474942 14.4,6.30261446 14.4,8 C14.4,11.5346224 11.5346224,14.4 8,14.4 M8,0 C3.581722,0 0,3.581722 0,8 C0,10.1217319 0.84285472,12.1565632 2.34314575,13.6568542 C3.84343678,15.1571453 5.87826808,16 8,16 C10.1217319,16 12.1565632,15.1571453 13.6568542,13.6568542 C15.1571453,12.1565632 16,10.1217319 16,8 C16,5.87826808 15.1571453,3.84343678 13.6568542,2.34314575 C12.1565632,0.84285472 10.1217319,0 8,0 M9.6,5.6 C9.6,4.712 8.88,4 8,4 C7.112,4 6.4,4.712 6.4,5.6 C6.4,6.4836556 7.1163444,7.2 8,7.2 C8.8836556,7.2 9.6,6.4836556 9.6,5.6 M5.6,8 C4.7163444,8 4,8.7163444 4,9.6 C4,10.4836556 4.7163444,11.2 5.6,11.2 C6.4836556,11.2 7.2,10.4836556 7.2,9.6 C7.2,8.712 6.48,8 5.6,8 Z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`MenuIcon render simple privacy 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  width: 20px;
  height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 8px;
}

.emotion-3 {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #b2b6c3;
}

.emotion-3.emotion-3 {
  width: 16px;
  height: 16px;
  padding-left: 2px;
}

<div
    class="emotion-0 emotion-1"
  >
    <svg
      class="emotion-2 emotion-3 emotion-1"
      viewBox="0 0 16 16"
    >
      <path
        d="M8.333 0l-7 2.91v4.363c0 4.036 2.987 7.81 7 8.727 4.014-.916 7-4.69 7-8.727V2.909L8.333 0zm0 2.91c1.289 0 2.334.976 2.334 2.18 0 1.206-1.045 2.183-2.334 2.183C7.045 7.273 6 6.296 6 5.09s1.045-2.182 2.333-2.182zm3.99 8.726c-.94 1.346-2.349 2.357-3.99 2.851-1.64-.494-3.049-1.505-3.99-2.85a7.28 7.28 0 0 1-.676-1.113c0-1.2 2.107-2.182 4.666-2.182 2.56 0 4.667.96 4.667 2.182a7.28 7.28 0 0 1-.677 1.112z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`MenuIcon render simple profile 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  width: 20px;
  height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 8px;
}

.emotion-3 {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #b2b6c3;
}

.emotion-3.emotion-3 {
  width: 16px;
  height: 16px;
  padding-left: 2px;
}

<div
    class="emotion-0 emotion-1"
  >
    <svg
      class="emotion-2 emotion-3 emotion-1"
      viewBox="0 0 16 16"
    >
      <path
        d="M8 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8zm0 10c4.42 0 8 1.79 8 4v2H0v-2c0-2.21 3.58-4 8-4z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`MenuIcon render simple support 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  width: 20px;
  height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 8px;
}

.emotion-3 {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #b2b6c3;
}

.emotion-3.emotion-3 {
  width: 16px;
  height: 16px;
  padding-left: 2px;
}

<div
    class="emotion-0 emotion-1"
  >
    <svg
      class="emotion-2 emotion-3 emotion-1"
      viewBox="0 0 16 16"
    >
      <path
        d="M14.232,10.728 C14.992,8.992 14.992,7 14.232,5.272 L12.04,6.264 C12.52,7.368 12.52,8.624 12.048,9.736 L14.232,10.728 M10.736,1.768 C9,1.008 7.008,1.008 5.272,1.768 L6.264,3.952 C7.376,3.48 8.632,3.48 9.744,3.96 L10.736,1.768 M1.768,5.264 C1.008,7.008 1.008,8.992 1.768,10.736 L3.96,9.736 C3.48,8.632 3.48,7.368 3.96,6.256 L1.768,5.264 M5.272,14.232 C7.008,14.992 9,14.992 10.736,14.224 L9.744,12.04 C8.64,12.52 7.376,12.52 6.272,12.048 L5.272,14.232 M8,0 C10.1217319,0 12.1565632,0.842854723 13.6568542,2.34314575 C15.1571453,3.84343678 16,5.87826808 16,8 C16,12.418278 12.418278,16 8,16 C5.87826808,16 3.84343678,15.1571453 2.34314575,13.6568542 C0.842854723,12.1565632 0,10.1217319 0,8 C0,5.87826808 0.842854723,3.84343678 2.34314575,2.34314575 C3.84343678,0.842854723 5.87826808,0 8,0 M8,4.8 C6.2326888,4.8 4.8,6.2326888 4.8,8 C4.8,9.7673112 6.2326888,11.2 8,11.2 C9.7673112,11.2 11.2,9.7673112 11.2,8 C11.2,6.2326888 9.7673112,4.8 8,4.8 Z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`MenuIcon render simple switch_orga 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  width: 20px;
  height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 8px;
}

.emotion-3 {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #b2b6c3;
}

.emotion-3.emotion-3 {
  width: 16px;
  height: 16px;
  padding-left: 2px;
}

<div
    class="emotion-0 emotion-1"
  >
    <svg
      class="emotion-2 emotion-3 emotion-1"
      viewBox="0 0 16 16"
    >
      <path
        d="M10.91 5.818c1.694 0 5.09.851 5.09 2.546v1.818h-4.364V8.364c0-1.091-.589-1.899-1.425-2.51l.698-.036zm-5.82 0c1.695 0 5.092.851 5.092 2.546v1.818H0V8.364c0-1.695 3.396-2.546 5.09-2.546zm0-1.454A2.182 2.182 0 1 1 5.09 0a2.182 2.182 0 0 1 0 4.364zm5.82 0a2.182 2.182 0 1 1 0-4.364 2.182 2.182 0 0 1 0 4.364zm-5.092 7.09v1.637h4.364v-1.636l2.363 2.363-2.363 2.364v-1.637H5.818v1.637l-2.363-2.364 2.363-2.363z"
      />
    </svg>
  </div>
</DocumentFragment>
`;
